# k1ee

./: CMakeLists.txt  CMakeSettings.json  Readme.md  k1ee-config.cmake
cmake/: k1eeConfig.cmake
include/: CMakeLists.txt
include/k1ee/: encoding.h  exception.h  file.h  hook.h  k1ee.h  time.h
src/: CMakeLists.txt  alzuk4ip.laa~  encoding.cpp  file.cpp  time.cpp
test/: CMakeLists.txt  test_encoding.cpp  test_file.cpp  test_hook.cpp
